<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/gradient"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zapata.yerson.guiaturistica.SitiosActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sitio"
        android:textColor="@color/white"
        android:textSize="30dp" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView

                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/termales_santa_rosa_de_cabal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/titulosantarosasitiotitle"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oncabarinfo"
                android:textColor="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <ImageView

                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/sanvicente" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sanvicentetitulo"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sanvicenteinfo"
                android:textColor="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <ImageView

                android:layout_width="250dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:background="@drawable/ecoturismo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/ecoturtitle"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ecoturinfo"
                android:textColor="@color/white" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/gray" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>
